--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,16 +2,17 @@
 
 S3method(merge,statement)
 S3method(merge,statements)
+S3method(print,elements)
 S3method(print,statement)
 S3method(print,statements)
-S3method(print,xbrl_relations)
 S3method(print,xbrl_vars)
 export("%without%")
 export(expose)
-export(fold)
 export(get_elements)
-export(get_relations)
+export(get_elements_hierarchy)
 export(other)
+export(xbrl_get_relations)
+export(xbrl_get_statement_ids)
 export(xbrl_get_statements)
 export(xbrl_parse_min)
 importFrom(magrittr,"%>%")
