--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,9 @@ S3method(print,elements)
 S3method(print,statement)
 S3method(print,statements)
 S3method(print,xbrl_vars)
-export("%without%")
-export(expose)
+export(calculate)
 export(get_elements)
 export(get_elements_hierarchy)
-export(other)
 export(xbrl_get_relations)
 export(xbrl_get_statement_ids)
 export(xbrl_get_statements)
