--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ S3method(print,elements)
 S3method(print,statement)
 S3method(print,statements)
 export(calculate)
+export(calculation)
+export(do_calculation)
 export(get_elements)
 export(get_elements_h)
 export(xbrl_get_relations)
