--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,13 @@ S3method(diff,statement)
 S3method(merge,elements)
 S3method(merge,statement)
 S3method(merge,statements)
+S3method(print,check)
 S3method(print,elements)
 S3method(print,statement)
 S3method(print,statements)
 export(calculate)
 export(calculation)
+export(check_statement)
 export(do_calculation)
 export(get_elements)
 export(get_elements_h)
