--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(check_statement)
 export(do_calculation)
 export(get_elements)
 export(get_elements_h)
+export(join)
 export(plot_double_stacked_bar)
 export(xbrl_get_relations)
 export(xbrl_get_statement_ids)
