--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,13 +8,22 @@ S3method(print,check)
 S3method(print,elements)
 S3method(print,statement)
 S3method(print,statements)
+export("%without%")
+export(autoplot.statement)
 export(calculate)
 export(calculation)
 export(check_statement)
 export(do_calculation)
+export(expose)
+export(get_ascendant)
+export(get_descendants)
 export(get_elements)
 export(get_elements_h)
+export(get_parent)
+export(other)
 export(plot_double_stacked_bar)
+export(plot_waterfall)
+export(reshape_long)
 export(xbrl_get_relations)
 export(xbrl_get_statement_ids)
 export(xbrl_get_statements)
