--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(get_parent)
 export(other)
 export(plot_double_stacked_bar)
 export(plot_waterfall)
+export(proportional)
 export(reshape_long)
 export(xbrl_get_relations)
 export(xbrl_get_statement_ids)
