--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ S3method(merge,elements)
 S3method(merge,statement)
 S3method(merge,statements)
 S3method(print,check)
-S3method(print,elements)
 S3method(print,statement)
 S3method(print,statements)
 export("%without%")
@@ -24,6 +23,7 @@ export(plot_double_stacked_bar)
 export(plot_waterfall)
 export(proportional)
 export(reshape_long)
+export(reshape_table)
 export(xbrl_get_relations)
 export(xbrl_get_statement_ids)
 export(xbrl_get_statements)
