--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,11 @@ Version: 0.1
 Date: 2015-03-22
 Author: Darko Bergant
 Maintainer: Darko Bergant <darko.bergant@gmail.com>
-Description: Package finstr provides the data structures and functions 
-  for manipulating financial statements data in R.
+Description: Data structures and functions for manipulating financial 
+  statements. Using parsed XBRL data and validating statement consistency.
+  Merging statements from different periods or different statement types.
+  Calculating custom financial ratios and creating custom statements
+  by aggregating financial categories.
 Depends: R (>= 2.10)
 License: GPL-2
 Imports: 
