--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(other)
 export(plot_double_stacked_bar)
 export(plot_waterfall)
 export(proportional)
+export(reshape_long)
 export(reshape_table)
 export(xbrl_get_data)
 export(xbrl_get_relations)
