--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: finstr
 Type: Package
 Title: Financial Statements in R
-Version: 0.1.2
-Date: 2016-01-19
+Version: 0.1.2.9000
+Date: 2017-02-13
 Author: Darko Bergant
 Maintainer: Darko Bergant <darko.bergant@gmail.com>
 URL: https://github.com/bergant/finstr
@@ -28,3 +28,5 @@ Suggests:
     htmlTable
 VignetteBuilder: knitr
 RoxygenNote: 5.0.1
+LazyData: true
+
